--- a/src/templates/components/footer/_footer.scss
+++ b/src/templates/components/footer/_footer.scss
@@ -147,7 +147,7 @@
   }
 }
 
-@media(max-width: 1024px) {
+@media(max-width: 1023px) {
   .footer {
     padding-top: 12rem;
     padding-bottom: 12rem;
@@ -182,7 +182,8 @@
       padding-top: 2rem;
       
       &-content {
-        @include flex-column($gap: 1.9rem)
+        @include flex-column($gap: 1.9rem);
+        text-align: center;
       }
     }
   }
