--- a/src/templates/components/room-card/_room-card.scss
+++ b/src/templates/components/room-card/_room-card.scss
@@ -1,7 +1,6 @@
 .room-card {
   width: 100%;
   max-width: 270px;
-  min-height: 257px;
   box-shadow: 0 1rem 2rem $darkShade5;
   border-radius: 0.4rem;
   background-color: #fff;
@@ -9,7 +8,7 @@
   &__slider {
     position: relative;
     @include set-size(100%, 60%);
-    max-height: 151px;
+    min-height: 15.1rem;
     overflow: hidden;
 
     &-items {
