--- a/src/templates/components/expandable-checkbox-list/_expandable-checkbox-list.scss
+++ b/src/templates/components/expandable-checkbox-list/_expandable-checkbox-list.scss
@@ -28,12 +28,15 @@
   }
 
   &__content {
+    display: none;
+  }
+
+  &__items {
     @include flex-column($gap: 1rem);
     overflow: hidden;
     list-style: none;
     margin: 0;
     padding-left: 0;
-    transition: height 0.5s;
   }
 }
 
