Modified text-field, dropdown, datepicker-block, calendar and subscription-field components

--- a/src/templates/components/datepicker-block/datepicker-block.pug
+++ b/src/templates/components/datepicker-block/datepicker-block.pug
@@ -9,11 +9,11 @@ mixin datepicker-block(options)
     const {
       isCalendarHidden,
       hasMultipleFields, 
-      fields: {field1, field2} = {},
+      fields: {field1, field2},
       calendar : {
         renderCalendarDate,
         currentDate,
-        initialSelectedDates: {start, end} = {}
+        initialSelectedDates = {}
       } = {}
     } = options
 
