--- a/src/templates/components/calendar/calendar.pug
+++ b/src/templates/components/calendar/calendar.pug
@@ -4,13 +4,13 @@ mixin calendar(options)
   if !options
     - options = {}
 
-  - const {renderCalendarDate, currentDate, initialSelectedDates: {start, end} = {}} = options
+  - const {renderCalendarDate, currentDate, initialSelectedDates = {}} = options
 
   .calendar(
     data-render-date = renderCalendarDate,
     data-current = currentDate, 
-    data-initial-start = start,
-    data-initial-end = end
+    data-initial-start = initialSelectedDates.start,
+    data-initial-end = initialSelectedDates.end
   )
     .calendar__container 
       .calendar__content
