--- a/src/templates/components/login-panel/login-panel.pug
+++ b/src/templates/components/login-panel/login-panel.pug
@@ -35,7 +35,7 @@ mixin login-panel(options)
         })
     .login-panel__registration
       = "Нет аккаунта на Toxin?"
-      a.login-panel__registration-link
+      a.login-panel__registration-link(href="./registration.html")
         +main-button({
           style: "outlined",
           text: "создать"
