Created donut-chart component and new scss variables

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,8 @@
 $primaryGradient: linear-gradient(180deg, hsl(259, 100%, 81%) 0%, hsl(226, 90%, 76%) 100%);
 $primaryGradientSemiTransparent: linear-gradient(180deg, hsla(259, 100%, 81%, 0.5) 0%, hsla(226, 90%, 76%, 0.5) 100%);
 $secondaryGradient: linear-gradient(180deg, hsl(145, 50%, 62%), hsl(191, 76%, 66%) 100%);
+$yellowGradient: linear-gradient(180deg, hsl(43, 100%, 81%) 0%, hsl(18, 100%, 81%) 100%);
+$darkGradient: linear-gradient(180deg, hsl(0, 0%, 57%) 0%, hsl(227, 31%, 35%) 100%);
 $whiteGradient: linear-gradient(180deg, hsl(0, 0%, 100%), hsl(0, 0%, 100%));
 $purple: hsl(259, 100%, 81%);
 $green: hsl(145, 50%, 62%);
