--- a/src/templates/components/footer/_footer.scss
+++ b/src/templates/components/footer/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
   background-color: #fff;
   padding: 10rem 0 2.3rem 0;
+  border-top: 1px solid hsl(0, 0%, 90%);
 
   &__container {
     width: 80.5%;
